[gd_scene load_steps=6 format=2]

[ext_resource path="res://Lobby/Lobby.gd" type="Script" id=1]
[ext_resource path="res://Assets/Roboto-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=2]
resource_name = "Fade_Out"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="LoadingScreen" type="ColorRect" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/LoadingScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadingLabel" type="Label" parent="CanvasLayer/LoadingScreen/CenterContainer"]
margin_left = 903.0
margin_top = 521.0
margin_right = 1017.0
margin_bottom = 559.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Loading"

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/LoadingScreen"]
anims/Fade_Out = SubResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0313726, 0.105882, 0.215686, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 860.0
margin_top = 401.0
margin_right = 1060.0
margin_bottom = 678.0
custom_constants/separation = 15
alignment = 1

[node name="LobbyName" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 200.0
margin_bottom = 14.0
text = "Lobby Name"
align = 1
valign = 1

[node name="PlayerList" type="ItemList" parent="CenterContainer/VBoxContainer"]
margin_top = 29.0
margin_right = 200.0
margin_bottom = 182.0
rect_min_size = Vector2( 200, 0 )
custom_constants/vseparation = 10
items = [ "Player 1", null, false, "Player 2", null, false, "Player 3", null, false, "Player 4", null, false ]
auto_height = true
same_column_width = true
fixed_column_width = 200
icon_mode = 0

[node name="StartButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 197.0
margin_right = 200.0
margin_bottom = 237.0
rect_min_size = Vector2( 0, 40 )
custom_fonts/font = SubResource( 3 )
text = "Start Game"

[node name="LeaveButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 252.0
margin_right = 200.0
margin_bottom = 277.0
rect_min_size = Vector2( 100, 25 )
custom_fonts/font = SubResource( 3 )
text = "Leave"

[connection signal="pressed" from="CenterContainer/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/LeaveButton" to="." method="_on_LeaveButton_pressed"]
